Refactor App.java to suppress additional warnings and use Integer.valueOf for better performance